@@ -1,3 +1,7 @@
+2021-02-18  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* graph/grblit.c: Clean up pointer and variable types.
+
 2021-02-03  Werner Lemberg  <wl@gnu.org>
 
 	[ftgrid] Make `-f ... -e ...` work.
